Bug 520633 - Renaming a file on desktop with multiple activities causes it to disappear from current activity
Summary: Renaming a file on desktop with multiple activities causes it to disappear fr...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.7.80
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-05-25 12:50 UTC by Akseli Lahtinen
Modified: 2026-05-28 10:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Akseli Lahtinen 2026-05-25 12:50:56 UTC
DESCRIPTION

If one has icon on desktop and has multiple activities, the icon disappears when renamed, but only in the current active activity.


STEPS TO REPRODUCE
1. Create two activities
2. Create a file on desktop in Activity 1
3. Rename the file on Activity 1

OBSERVED RESULT
File disappears from Activity 1, shows in Activity 2

EXPECTED RESULT
File should show in both

SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2026-05-25
KDE Plasma Version: 6.7.80
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.9-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600


ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2026-05-25 14:56:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2243
Comment 2 Bug Janitor Service 2026-05-26 12:14:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3745
Comment 3 Akseli Lahtinen 2026-05-28 08:51:17 UTC
Git commit 872c9990a9f8ef25239542e72dfc4b7cd5e89341 by Akseli Lahtinen.
Committed on 28/05/2026 at 08:12.
Pushed by akselmo into branch 'master'.

Positioner: Fix disappearing icons on rename

When icons were renamed, they were not compared to
the old items name, but to the same new name.
This caused the positioner to think nothing had
changed.

In FolderModel we want to set the data to the folderModel
itself, not KDirModel, since FolderModel already handles
that. This makes sure our models do not get out of sync.

Remove the itemAboutToRename since it is not needed
Related: bug 511920
FIXED-IN: 6.7.0

M  +7    -9    containments/desktop/plugins/folder/foldermodel.cpp
M  +0    -1    containments/desktop/plugins/folder/foldermodel.h
M  +8    -19   containments/desktop/plugins/folder/positioner.cpp
M  +0    -3    containments/desktop/plugins/folder/positioner.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/872c9990a9f8ef25239542e72dfc4b7cd5e89341
Comment 4 Akseli Lahtinen 2026-05-28 10:28:09 UTC
Git commit bd59c308b5eff6c58a046495d50f45cf46b29286 by Akseli Lahtinen.
Committed on 28/05/2026 at 08:58.
Pushed by akselmo into branch 'Plasma/6.7'.

Positioner: Fix disappearing icons on rename

When icons were renamed, they were not compared to
the old items name, but to the same new name.
This caused the positioner to think nothing had
changed.

In FolderModel we want to set the data to the folderModel
itself, not KDirModel, since FolderModel already handles
that. This makes sure our models do not get out of sync.

Remove the itemAboutToRename since it is not needed
Related: bug 511920
FIXED-IN: 6.7.0


(cherry picked from commit 872c9990a9f8ef25239542e72dfc4b7cd5e89341)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +7    -9    containments/desktop/plugins/folder/foldermodel.cpp
M  +0    -1    containments/desktop/plugins/folder/foldermodel.h
M  +8    -19   containments/desktop/plugins/folder/positioner.cpp
M  +0    -3    containments/desktop/plugins/folder/positioner.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/bd59c308b5eff6c58a046495d50f45cf46b29286