Positioner: Fix disappearing icons on rename

When icons were renamed, they were not compared to
the old items name, but to the same new name.
This caused the positioner to think nothing had
changed.

In FolderModel we want to set the data to the folderModel
itself, not KDirModel, since FolderModel already handles
that. This makes sure our models do not get out of sync.

Remove the itemAboutToRename since it is not needed

BUG: 520633
BUG: 511920
FIXED-IN: 6.7.0