containments/desktop/plugins/folder/foldermodel.h
@@ -294,7 +294,6 @@ Q_SIGNALS:
     void popupMenuAboutToShow(KIO::DropJob *dropJob, QMimeData *mimeData, int x, int y);
     void selectionChanged() const;
     void showHiddenFilesChanged() const;
-    void itemAboutToRename(const QString &filename) const;
     void itemRenamed(const QString &filename, const QString &newFilename) const;
     void screenGeometryChanged() const;
     void selectionDone();
